# hal-9000

./: .gitignore  CHEATSHEET.md  CLAUDE.md  CONTRIBUTING.md  KNOWLEDGE_AUDIT_REPORT.md  Makefile  README-CLAUDY.md  README-CUSTOM_PROFILES.md  README-HAL9000.md  README-LOCAL_PROFILES.md  README.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.1.0.md  SECURITY.md  SECURITY_FIX_SUMMARY.md  TESTING.md  aod-test.conf  aod-test.yml  claudy  hal-9000  install-claudy.sh  install-hal-9000.sh  install.sh  uninstall.sh
.beads/: issues.jsonl
.claude-plugin/: marketplace.json
.github/workflows/: README.md  (+6 more)
.pm/: CLAUDE-NATIVE-BUILD-COMPATIBILITY.md  CONTINUATION.md  DOCKERFILE-NATIVE-BUILD-UPDATE.md  METHODOLOGY.md  PHASE1-IMPLEMENTATION-STATUS.md  PHASE1-WEEK1-SUMMARY.md  SESSION-SUMMARY-2026-01-25.md  TESTING-PLAN.md
scripts/: README-DIGEST-AUTOMATION.md  agent-registry.py  migrate-to-dind.sh  rollback-dind.sh  rollback-to-v1.sh  setup-foundation-mcp.sh  update-base-image-digests.sh  update-image-shas.sh  validate-handoff-graph.py
scripts/tests/fixtures/: Pipfile  build.gradle  build.gradle.kts  package.json  pom.xml  pyproject.toml  requirements.txt
templates/: CLAUDE-aod-global.md  CLAUDE.md  README.md  java-project.md  python-project.md  tmux.conf  typescript-project.md
tests/: README.md  run-all-tests.sh  test-category-01-help-version.sh  test-category-02-setup-authentication.sh  test-category-03-profile-detection.sh  test-category-04-session-management.sh  test-category-05-command-line-arguments.sh  test-category-06-environment-variables.sh  (+8 more)
(+223 files in other folders)
