[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hal-9000-test-python"
version = "1.0.0"
description = "Minimal valid Python project for hal-9000 testing"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}

dependencies = [
    "requests>=2.30.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
dev = [
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]

[tool.setuptools]
packages = ["hal9000_test"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=hal9000_test --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
